--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -95,6 +95,21 @@ img {
   max-width:100%;
 }
 
+img.bookfront { position: relative; 
+  opacity: 0; 
+  transition-property: opacity; 
+  transition-duration: 0.5s; 
+  width: 40%; height: 40%;
+}
+img.bookfront:hover { opacity: 1;     
+  width: 40%; height: 40%;
+}
+img.bookback { position: absolute; 
+  -webkit-filter: sepia(90%); 
+  hue-rotate(180deg) saturate(300%); 
+  width: 30%; height: 30%;
+}
+
 header {
   width:270px;
   float:left;
