--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -99,16 +99,16 @@ img.bookfront { position: relative;
   opacity: 0; 
   transition-property: opacity; 
   transition-duration: 0.5s; 
-  width: 30%; height: 30%;
+  width: 30%; height: auto;
 }
 img.bookfront:hover { opacity: 1;     
-  width: 30%; height: 30%;
+  width: 30%; height: auto;
 }
 img.bookback { 
   position: absolute; 
   -webkit-filter: sepia(90%); 
   filter: sepia(90%); 
-  width: 30%; height: 30%;
+  width: 30%; height: auto;
 }
 
 header {
